--- a/TestApp1/en.lproj/MainMenu.xib
+++ b/TestApp1/en.lproj/MainMenu.xib
@@ -1283,16 +1283,16 @@
 										<object class="NSTableView" id="243495482">
 											<reference key="NSNextResponder" ref="243087117"/>
 											<int key="NSvFlags">256</int>
-											<string key="NSFrameSize">{982, 145}</string>
+											<string key="NSFrameSize">{1159, 145}</string>
 											<reference key="NSSuperview" ref="243087117"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView" ref="333775826"/>
+											<reference key="NSNextKeyView" ref="309151393"/>
 											<int key="NSViewLayerContentsRedrawPolicy">2</int>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTableHeaderView" key="NSHeaderView" id="230757087">
 												<reference key="NSNextResponder" ref="333775826"/>
 												<int key="NSvFlags">256</int>
-												<string key="NSFrameSize">{982, 17}</string>
+												<string key="NSFrameSize">{1159, 17}</string>
 												<reference key="NSSuperview" ref="333775826"/>
 												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="775033424"/>
@@ -1302,7 +1302,7 @@
 											<object class="_NSCornerView" key="NSCornerView" id="775033424">
 												<reference key="NSNextResponder" ref="253340768"/>
 												<int key="NSvFlags">-2147483392</int>
-												<string key="NSFrame">{{363, 0}, {16, 17}}</string>
+												<string key="NSFrame">{{383, 0}, {16, 17}}</string>
 												<reference key="NSSuperview" ref="253340768"/>
 												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="243087117"/>
@@ -1414,8 +1414,40 @@
 													<bool key="NSIsResizeable">YES</bool>
 													<bool key="NSIsEditable">YES</bool>
 													<reference key="NSTableView" ref="243495482"/>
-													<object class="NSSortDescriptor" key="NSSortDescriptorPrototype" id="967481335">
+													<object class="NSSortDescriptor" key="NSSortDescriptorPrototype">
 														<string key="NSKey">name</string>
+														<bool key="NSAscending">YES</bool>
+														<string key="NSSelector">compare:</string>
+													</object>
+												</object>
+												<object class="NSTableColumn" id="852149412">
+													<string key="NSIdentifier">FileSize</string>
+													<double key="NSWidth">80</double>
+													<double key="NSMinWidth">10</double>
+													<double key="NSMaxWidth">500</double>
+													<object class="NSTableHeaderCell" key="NSHeaderCell">
+														<int key="NSCellFlags">75628096</int>
+														<int key="NSCellFlags2">2048</int>
+														<string key="NSContents">Size</string>
+														<reference key="NSSupport" ref="26"/>
+														<reference key="NSBackgroundColor" ref="212243850"/>
+														<reference key="NSTextColor" ref="469231407"/>
+													</object>
+													<object class="NSTextFieldCell" key="NSDataCell" id="1030441707">
+														<int key="NSCellFlags">337772096</int>
+														<int key="NSCellFlags2">2048</int>
+														<string key="NSContents">Text Cell</string>
+														<reference key="NSSupport" ref="36266513"/>
+														<reference key="NSControlView" ref="243495482"/>
+														<reference key="NSBackgroundColor" ref="504651618"/>
+														<reference key="NSTextColor" ref="98835"/>
+													</object>
+													<int key="NSResizingMask">3</int>
+													<bool key="NSIsResizeable">YES</bool>
+													<bool key="NSIsEditable">YES</bool>
+													<reference key="NSTableView" ref="243495482"/>
+													<object class="NSSortDescriptor" key="NSSortDescriptorPrototype">
+														<string key="NSKey">fileSize</string>
 														<bool key="NSAscending">YES</bool>
 														<string key="NSSelector">compare:</string>
 													</object>
@@ -1446,7 +1478,7 @@
 													<bool key="NSIsResizeable">YES</bool>
 													<bool key="NSIsEditable">YES</bool>
 													<reference key="NSTableView" ref="243495482"/>
-													<object class="NSSortDescriptor" key="NSSortDescriptorPrototype" id="576660094">
+													<object class="NSSortDescriptor" key="NSSortDescriptorPrototype">
 														<string key="NSKey">sha1hash</string>
 														<bool key="NSAscending">YES</bool>
 														<string key="NSSelector">compare:</string>
@@ -1454,7 +1486,7 @@
 												</object>
 												<object class="NSTableColumn" id="227674470">
 													<string key="NSIdentifier">MD5</string>
-													<double key="NSWidth">300</double>
+													<double key="NSWidth">394</double>
 													<double key="NSMinWidth">40</double>
 													<double key="NSMaxWidth">1000</double>
 													<object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -1478,7 +1510,7 @@
 													<bool key="NSIsResizeable">YES</bool>
 													<bool key="NSIsEditable">YES</bool>
 													<reference key="NSTableView" ref="243495482"/>
-													<object class="NSSortDescriptor" key="NSSortDescriptorPrototype" id="836041750">
+													<object class="NSSortDescriptor" key="NSSortDescriptorPrototype">
 														<string key="NSKey">md5hash</string>
 														<bool key="NSAscending">YES</bool>
 														<string key="NSSelector">compare:</string>
@@ -1501,11 +1533,6 @@
 											<int key="NSTvFlags">-631242752</int>
 											<reference key="NSDelegate"/>
 											<reference key="NSDataSource"/>
-											<array key="NSSortDescriptors">
-												<reference ref="967481335"/>
-												<reference ref="576660094"/>
-												<reference ref="836041750"/>
-											</array>
 											<int key="NSColumnAutoresizingStyle">4</int>
 											<int key="NSDraggingSourceMaskForLocal">15</int>
 											<int key="NSDraggingSourceMaskForNonLocal">0</int>
@@ -1525,14 +1552,14 @@
 								<object class="NSScroller" id="309151393">
 									<reference key="NSNextResponder" ref="253340768"/>
 									<int key="NSvFlags">-2147483392</int>
-									<string key="NSFrame">{{363, 17}, {15, 117}}</string>
+									<string key="NSFrame">{{383, 17}, {15, 145}}</string>
 									<reference key="NSSuperview" ref="253340768"/>
 									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="1000574612"/>
 									<int key="NSViewLayerContentsRedrawPolicy">2</int>
 									<reference key="NSTarget" ref="253340768"/>
 									<string key="NSAction">_doScroller:</string>
-									<double key="NSPercent">0.88636363636363635</double>
+									<double key="NSPercent">0.90625</double>
 								</object>
 								<object class="NSScroller" id="1000574612">
 									<reference key="NSNextResponder" ref="253340768"/>
@@ -1540,12 +1567,13 @@
 									<string key="NSFrame">{{1, 162}, {397, 15}}</string>
 									<reference key="NSSuperview" ref="253340768"/>
 									<reference key="NSWindow"/>
+									<reference key="NSNextKeyView"/>
 									<int key="NSViewLayerContentsRedrawPolicy">2</int>
 									<bool key="NSEnabled">YES</bool>
 									<int key="NSsFlags">1</int>
 									<reference key="NSTarget" ref="253340768"/>
 									<string key="NSAction">_doScroller:</string>
-									<double key="NSPercent">0.40427698574338083</double>
+									<double key="NSPercent">0.34253666954270923</double>
 								</object>
 								<object class="NSClipView" id="333775826">
 									<reference key="NSNextResponder" ref="253340768"/>
@@ -1567,7 +1595,7 @@
 							<string key="NSFrame">{{15, 20}, {399, 178}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="243087117"/>
+							<reference key="NSNextKeyView" ref="333775826"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<int key="NSsFlags">690</int>
 							<reference key="NSVScroller" ref="309151393"/>
@@ -3274,6 +3302,7 @@
 							<reference ref="365846221"/>
 							<reference ref="227674470"/>
 							<reference ref="1021783596"/>
+							<reference ref="852149412"/>
 						</array>
 						<reference key="parent" ref="253340768"/>
 					</object>
@@ -3343,6 +3372,19 @@
 						<int key="objectID">594</int>
 						<reference key="object" ref="280481948"/>
 						<reference key="parent" ref="1021783596"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">606</int>
+						<reference key="object" ref="852149412"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="1030441707"/>
+						</array>
+						<reference key="parent" ref="243495482"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">607</int>
+						<reference key="object" ref="1030441707"/>
+						<reference key="parent" ref="852149412"/>
 					</object>
 				</array>
 			</object>
@@ -3500,6 +3542,8 @@
 				<string key="585.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="592.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="594.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="606.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="607.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="75.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3514,7 +3558,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">605</int>
+			<int key="maxID">607</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3576,20 +3620,17 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="tableView">NSTableView</string>
-						<string key="window">NSWindow</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="tableView">
-							<string key="name">tableView</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="window">
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">window</string>
+						<string key="NS.object.0">NSWindow</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">window</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
 							<string key="name">window</string>
 							<string key="candidateClassName">NSWindow</string>
 						</object>
-					</dictionary>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/learningAppDelegate.h</string>
