--- a/SHA1CalcOnMac/en.lproj/MainMenu.xib
+++ b/SHA1CalcOnMac/en.lproj/MainMenu.xib
@@ -297,7 +297,7 @@
 									<reference key="NSOnImage" ref="35465992"/>
 									<reference key="NSMixedImage" ref="502551668"/>
 								</object>
-								<object class="NSMenuItem" id="35983464">
+								<object class="NSMenuItem" id="637720126">
 									<reference key="NSMenu" ref="789758025"/>
 									<bool key="NSIsDisabled">YES</bool>
 									<bool key="NSIsSeparator">YES</bool>
@@ -696,7 +696,7 @@
 							</array>
 						</object>
 					</object>
-					<object class="NSMenuItem" id="52498972">
+					<object class="NSMenuItem" id="1048091404">
 						<reference key="NSMenu" ref="649796088"/>
 						<string key="NSTitle">Tool</string>
 						<string key="NSKeyEquiv"/>
@@ -704,11 +704,11 @@
 						<reference key="NSOnImage" ref="35465992"/>
 						<reference key="NSMixedImage" ref="502551668"/>
 						<string key="NSAction">submenuAction:</string>
-						<object class="NSMenu" key="NSSubmenu" id="1009390565">
+						<object class="NSMenu" key="NSSubmenu" id="345769362">
 							<string key="NSTitle">Tool</string>
 							<array class="NSMutableArray" key="NSMenuItems">
 								<object class="NSMenuItem" id="1011382841">
-									<reference key="NSMenu" ref="1009390565"/>
+									<reference key="NSMenu" ref="345769362"/>
 									<string key="NSTitle">Duplication Check</string>
 									<string key="NSKeyEquiv">b</string>
 									<int key="NSKeyEquivModMask">1048576</int>
@@ -717,7 +717,7 @@
 									<reference key="NSMixedImage" ref="502551668"/>
 								</object>
 								<object class="NSMenuItem" id="773061565">
-									<reference key="NSMenu" ref="1009390565"/>
+									<reference key="NSMenu" ref="345769362"/>
 									<string key="NSTitle">Unmark Single</string>
 									<string key="NSKeyEquiv"/>
 									<int key="NSMnemonicLoc">2147483647</int>
@@ -725,8 +725,8 @@
 									<reference key="NSOnImage" ref="35465992"/>
 									<reference key="NSMixedImage" ref="502551668"/>
 								</object>
-								<object class="NSMenuItem" id="673376814">
-									<reference key="NSMenu" ref="1009390565"/>
+								<object class="NSMenuItem" id="561509248">
+									<reference key="NSMenu" ref="345769362"/>
 									<bool key="NSIsDisabled">YES</bool>
 									<bool key="NSIsSeparator">YES</bool>
 									<string key="NSTitle"/>
@@ -735,8 +735,8 @@
 									<reference key="NSOnImage" ref="35465992"/>
 									<reference key="NSMixedImage" ref="502551668"/>
 								</object>
-								<object class="NSMenuItem" id="277888500">
-									<reference key="NSMenu" ref="1009390565"/>
+								<object class="NSMenuItem" id="666405375">
+									<reference key="NSMenu" ref="345769362"/>
 									<string key="NSTitle">Open File</string>
 									<string key="NSKeyEquiv">l</string>
 									<int key="NSKeyEquivModMask">1048576</int>
@@ -745,7 +745,7 @@
 									<reference key="NSMixedImage" ref="502551668"/>
 								</object>
 								<object class="NSMenuItem" id="212016141">
-									<reference key="NSMenu" ref="1009390565"/>
+									<reference key="NSMenu" ref="345769362"/>
 									<bool key="NSIsDisabled">YES</bool>
 									<bool key="NSIsSeparator">YES</bool>
 									<string key="NSTitle"/>
@@ -756,7 +756,7 @@
 									<reference key="NSMixedImage" ref="502551668"/>
 								</object>
 								<object class="NSMenuItem" id="522550557">
-									<reference key="NSMenu" ref="1009390565"/>
+									<reference key="NSMenu" ref="345769362"/>
 									<string key="NSTitle">Move to Trash Marked Files</string>
 									<string key="NSKeyEquiv"/>
 									<int key="NSMnemonicLoc">2147483647</int>
@@ -2495,11 +2495,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
-						<string key="label">openFile:</string>
+						<string key="label">openFileAtWorkspace:</string>
 						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="277888500"/>
+						<reference key="destination" ref="666405375"/>
 					</object>
-					<int key="connectionID">636</int>
+					<int key="connectionID">637</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -2547,7 +2547,7 @@
 							<reference ref="586577488"/>
 							<reference ref="302598603"/>
 							<reference ref="448692316"/>
-							<reference ref="52498972"/>
+							<reference ref="1048091404"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -2650,7 +2650,7 @@
 							<reference ref="199970018"/>
 							<reference ref="444637993"/>
 							<reference ref="888547720"/>
-							<reference ref="35983464"/>
+							<reference ref="637720126"/>
 						</array>
 						<reference key="parent" ref="952259628"/>
 					</object>
@@ -3616,59 +3616,59 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">630</int>
-						<reference key="object" ref="52498972"/>
+						<reference key="object" ref="1048091404"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="1009390565"/>
+							<reference ref="345769362"/>
 						</array>
 						<reference key="parent" ref="649796088"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">631</int>
-						<reference key="object" ref="1009390565"/>
+						<reference key="object" ref="345769362"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="773061565"/>
 							<reference ref="1011382841"/>
 							<reference ref="212016141"/>
 							<reference ref="522550557"/>
-							<reference ref="673376814"/>
-							<reference ref="277888500"/>
+							<reference ref="561509248"/>
+							<reference ref="666405375"/>
 						</array>
-						<reference key="parent" ref="52498972"/>
+						<reference key="parent" ref="1048091404"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">612</int>
 						<reference key="object" ref="1011382841"/>
-						<reference key="parent" ref="1009390565"/>
+						<reference key="parent" ref="345769362"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">611</int>
 						<reference key="object" ref="773061565"/>
-						<reference key="parent" ref="1009390565"/>
+						<reference key="parent" ref="345769362"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">214</int>
 						<reference key="object" ref="212016141"/>
-						<reference key="parent" ref="1009390565"/>
+						<reference key="parent" ref="345769362"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">633</int>
-						<reference key="object" ref="35983464"/>
+						<reference key="object" ref="637720126"/>
 						<reference key="parent" ref="789758025"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">623</int>
 						<reference key="object" ref="522550557"/>
-						<reference key="parent" ref="1009390565"/>
+						<reference key="parent" ref="345769362"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">634</int>
-						<reference key="object" ref="673376814"/>
-						<reference key="parent" ref="1009390565"/>
+						<reference key="object" ref="561509248"/>
+						<reference key="parent" ref="345769362"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">635</int>
-						<reference key="object" ref="277888500"/>
-						<reference key="parent" ref="1009390565"/>
+						<reference key="object" ref="666405375"/>
+						<reference key="parent" ref="345769362"/>
 					</object>
 				</array>
 			</object>
@@ -3856,7 +3856,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">636</int>
+			<int key="maxID">637</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3914,7 +3914,7 @@
 						<string key="mergeDocument:">id</string>
 						<string key="newDocument:">id</string>
 						<string key="openDocument:">id</string>
-						<string key="openFile:">id</string>
+						<string key="openFileAtWorkspace:">id</string>
 						<string key="openFileDialog:">id</string>
 						<string key="openPreference:">id</string>
 						<string key="resetMark:">id</string>
@@ -3960,8 +3960,8 @@
 							<string key="name">openDocument:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-						<object class="IBActionInfo" key="openFile:">
-							<string key="name">openFile:</string>
+						<object class="IBActionInfo" key="openFileAtWorkspace:">
+							<string key="name">openFileAtWorkspace:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="openFileDialog:">
