--- a/SHA1CalcOnMac/FindWindow.xib
+++ b/SHA1CalcOnMac/FindWindow.xib
@@ -159,9 +159,9 @@
 								<reference key="NSSupport" ref="492687974"/>
 								<reference key="NSControlView" ref="856643207"/>
 								<int key="NSButtonFlags">-2038284033</int>
-								<int key="NSButtonFlags2">268435585</int>
+								<int key="NSButtonFlags2">129</int>
 								<string key="NSAlternateContents"/>
-								<string key="NSKeyEquivalent">g</string>
+								<string type="base64-UTF8" key="NSKeyEquivalent">DQ</string>
 								<int key="NSPeriodicDelay">200</int>
 								<int key="NSPeriodicInterval">25</int>
 							</object>
@@ -426,6 +426,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">FindWindowController</string>
 					<string key="superclassName">NSWindowController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">txtSearch</string>
+						<string key="NS.object.0">NSTextField</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">txtSearch</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">txtSearch</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/FindWindowController.h</string>
